# e-stitch

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  run.py
.config/: nextest.toml
.github/workflows/: ci.yml
expts/: __init__.py  _build.py  _subproc.py  babble.py  bench.py  egg_stitch.py  folders.py  render_common.py  result.py  runner.py  stitch.py  table1.py  table2.py  table3.py  table4.py  tables.py
figures/: table1.tex  table2.tex  table3.tex  table4.tex
results/: table1.json  table2.json  table3.json
scripts/: bench_pr.py  check_all_outputs.py  check_equiv.py  follow_reaches.py  follow_reaches_domain.py  render_tables.py  search_and_check.py  search_and_check_domain.py  test_check_equiv.py
src/: best_first.rs  candidates.rs  cost.rs  debug_log.rs  follow.rs  io.rs  lang.rs  lib.rs  logging.rs  lower_bound.rs  main.rs  matching.rs  math.rs  pattern.rs  results.rs  revexpr.rs  rewrites.rs  search.rs  shared.rs  shift.rs  shift_equal.rs  smc.rs  util.rs
tests/: check_equiv_regression_test.rs  cross_depth_reuse_then_db_var_regression.sh  drop_fv_test.rs  enumerate_kept_subst_subsets.rs  follow_parse_lambda_calc_test.rs  follow_unify_test.rs  fv_analysis_test.rs  integration_test.rs  lambda_calc_parse_test.rs  multi_abstraction_test.rs  op_db_test.rs  pattern_depth_test.rs  shift_free_test.rs  smc_fv_crash_regression.sh  stitch_compat_test.rs  unwrap_pattern_db_apps_test.rs  usage_counts_test.rs
viz/: analysis.js  debug.html  debug.js  index.html  server.py  style.css  table.css  table.js  table1.html  table2.html  tree.html  tree.js
(+1426 files in other folders)
