[package]
name = "egg-stitch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.0", features = ["derive"] }
egg = "0.10.0"
priority-queue = "2.7.0"
rand = "0.9.2"
rustc-hash = "2.1.1"
serde_json = "1.0"

[patch.crates-io]
egg = { git = "https://github.com/mlb2251/egg", rev = "196d7d4"}
# egg = { path = "../egg"}

[profile.release]
debug = true
